@@ -1,6 +1,11 @@
 Pending changes in the mainline
 ===============================
 
+REST API
+--------
+
+* added ?expand argument to /peers and /modalities routes
+
 
 Version 1.3.1 (2017-11-29)
 ==========================
